# Find-the-Best-Place-to-Stay-with-Price-per-Review

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app-linux  app-mac  db.sqlite3  docker-compose.build.yml  docker-compose.yml  entrypoint.sh  exe.go  get_auth_headers.go  get_auth_headers.py  go.mod  main.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  setup-web-app.sh  setup.sh  start-app.sh  test.py  test_main.py  vitest.config.mts
.github/: dependabot.yml
__tests__/: layout.test.tsx
app/: forms.py  models.py  urls.py  views.py
auth_headers/: .dockerignore  Dockerfile  app.py  extract_booking_headers.py  logging_config.py  pyproject.toml  requirements.txt
auth_headers/components/: api.py  browser_utils.py  constants.py  extractor.py  utils.py
auth_headers/tests/: conftest.py  test_booking_header_extractor.py  test_endpoints.py  test_extract_booking_headers.py
backend/: .dockerignore  Dockerfile  conftest.py  db.sqlite3  logging_config.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
django_project/: settings.py
docs/: DOCS.md
exe/: docker-compose.yml  exe.go
frontend/: .dockerignore  .nginx.conf  Dockerfile  eslint.config.mjs  index.html  jest.config.js  nginx.conf  package-lock.json  package.json  tsconfig.json  webpack.config.js
get_auth_headers_exe/: build-exe.sh  find_place_web_app.go
scraper/: graphql_scraper.py
scripts/: manage-license-headers.js
tests/: docker-compose-test.sh  test_check_info.py  test_concat_df.py  test_extract_data.py  (+2 more)
(+151 files in other folders)
