[project]
name = "auth-headers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.51.0",
    "python-dotenv>=1.1.0",
    "Flask>=3.1.0",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]
